--- a/Hermes/Hermes/Base.lproj/Main.storyboard
+++ b/Hermes/Hermes/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <!--主页-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <viewController id="9pv-A4-QxB" customClass="HomePageViewController" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="currentContext" id="9pv-A4-QxB" customClass="HomePageViewController" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="主页" image="first" id="acW-dT-cKf"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
