--- a/Hermes/Hermes/Base.lproj/Main.storyboard
+++ b/Hermes/Hermes/Base.lproj/Main.storyboard
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
-        <!--Home Page View Controller-->
+        <!--Event Table View Controller-->
         <scene sceneID="XV2-rZ-966">
             <objects>
-                <tableViewController id="7ig-dO-EOs" customClass="HomePageViewController" sceneMemberID="viewController">
+                <tableViewController id="7ig-dO-EOs" customClass="ZHEventTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Du7-98-ij9">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="F9t-YX-s1i" customClass="ZHEventTableViewCell">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="F9t-YX-s1i" id="VJE-Ep-gzZ">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="7ig-dO-EOs" id="vTK-B1-tOF"/>
                             <outlet property="delegate" destination="7ig-dO-EOs" id="UKS-5I-96x"/>
@@ -26,6 +35,41 @@
             </objects>
             <point key="canvasLocation" x="519" y="-524"/>
         </scene>
+        <!--Photo Album Collection View Controller-->
+        <scene sceneID="L48-TS-3jx">
+            <objects>
+                <collectionViewController id="1zY-R8-CxY" customClass="ZHPhotoAlbumCollectionViewController" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="wwn-b2-1xf">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="3Sf-RI-ade">
+                            <size key="itemSize" width="100" height="100"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Nna-RZ-2MQ" customClass="ZHPhotoAlbumCollectionViewCell">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="1zY-R8-CxY" id="feU-LN-vZC"/>
+                            <outlet property="delegate" destination="1zY-R8-CxY" id="kGe-YD-EfF"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="PfS-hS-RFC"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4vu-Bu-jBl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="537" y="318"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
             <objects>
@@ -38,16 +82,17 @@
                     </tabBar>
                     <connections>
                         <segue destination="xVL-aE-fs3" kind="relationship" relationship="viewControllers" id="MeO-RC-vOd"/>
+                        <segue destination="Wck-2v-i0K" kind="relationship" relationship="viewControllers" id="sad-LR-4UT"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1223" y="150"/>
+            <point key="canvasLocation" x="-1259" y="-2"/>
         </scene>
         <!--主页-->
         <scene sceneID="jNk-Le-M4y">
             <objects>
-                <navigationController title="主页" automaticallyAdjustsScrollViewInsets="NO" id="xVL-aE-fs3" customClass="FirstViewController" sceneMemberID="viewController">
+                <navigationController title="主页" automaticallyAdjustsScrollViewInsets="NO" id="xVL-aE-fs3" customClass="HomePageViewController" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="主页" id="4ao-FF-cDl"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="2cF-ht-TTl">
@@ -62,6 +107,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3YV-DR-nB3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-329" y="-524"/>
+        </scene>
+        <!--照片墙-->
+        <scene sceneID="KCq-GO-QrJ">
+            <objects>
+                <navigationController title="照片墙" automaticallyAdjustsScrollViewInsets="NO" id="Wck-2v-i0K" customClass="PhotoWallViewController" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="照片墙" id="eYH-ll-xjE"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ouz-XY-VKU">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="1zY-R8-CxY" kind="relationship" relationship="rootViewController" id="nll-kC-PHw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="quy-T1-hJE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-319" y="318"/>
         </scene>
     </scenes>
 </document>
